--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@
 
 }
 
-header{
+.background{
     background-image: url(img/pexels-ann-poan-5797903.jpg);
-    height: 100vh;
+    height: 97vh;
     background-size: cover;
     background-position: center;
+   
 }
 .navbar{
   background-color: #CDC2AE;
@@ -27,12 +28,18 @@ header{
 }
 
 
-/* .bloc{
-    height: 80px;
-    width: 100px;
+.bloc{
+     
+    height: 100px;
+    width: 150px;
     background-color: #A8A088;
     border-radius: 30px;
-} */
+    color: white;
+    margin: 0 auto;
+   
+   
+
+}
 
 img{
     border-radius: 50%; 
@@ -68,22 +75,11 @@ ul li a:hover{
 }
 
 
+ 
 
-
-.computer{
-    background-image: url("img/pexels-ann-poan-5797903.jpg");
-    background-position: center;
-    background-size: cover;
-    
-    height: 600px;
-    }
 
     .developpeuse{
-    
-        top: 70%;
-        left: 30%;
-        font-size: 60px;
-        
+        font-size: x-small;
     }
    
     
@@ -92,10 +88,12 @@ ul li a:hover{
 /*Présentation*/
 
 
-.body1{
+.fond{
     background-color: #CDC2AE;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
+  background-size: cover;
 }
 .Présentation{
     height: 225px;
@@ -108,18 +106,18 @@ ul li a:hover{
     
     height: 500px;
     width: 70%;
-   
-   font-size: medium;
 }
+   
 
- 
 .rectangle{
-    display: flex;
-    justify-content: center;
-
+    
+   display: flex;
+    padding: 10%;
     background-color: white;
     height: 65vh;
     width: 75vw;
+    margin: 0 auto; 
+
 
 }
 
@@ -228,7 +226,39 @@ margin-top: 50px;
 
 
 
+/*DWWM*/
 
+.arrièreplan{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    background-color: #CDC2AE;
+    background-size: cover;
+}
+
+.dwwm{  
+     width: 400px;
+    margin-top: 20px;
+    letter-spacing: 10px;
+    font-size: large;  
+      
+
+}
+
+.ordi{
+    margin-top: 30px;
+    background-image: url(img/pexels-ann-poan-5797903.jpg);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 70%;
+    border-radius: 20%;
+
+
+    
+}
 
 
 /*Contacts*/
@@ -250,6 +280,8 @@ margin-top: 50px;
 }
 
 .logo5{
+    margin-top: 1%;
+    margin-left: 1%;
     height: 800px;
     width: 20%;
 }
