--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: "judson",sans-serif;
 
 }
 
 .background{
     background-image: url(img/pexels-ann-poan-5797903.jpg);
-    height: 97vh;
+    height: 100vh;
     background-size: cover;
     background-position: center;
    
@@ -23,31 +23,20 @@
   width: 100%;
   box-sizing: border-box;
   
-  
-
 }
 
 
 .bloc{
      
-    height: 100px;
-    width: 150px;
-    background-color: #A8A088;
+    height: 150px;
+    width: 280px;
+    background-color: #CDC2AE;
     border-radius: 30px;
     color: white;
     margin: 0 auto;
-   
-   
-
-}
-
-img{
-    border-radius: 50%; 
-    height: 60px;
-    width: 60px;
     
-    top: 10px;
-    left: 10px;
+
+
    
 }
 
@@ -96,16 +85,22 @@ ul li a:hover{
   background-size: cover;
 }
 .Présentation{
+
     height: 225px;
     width: 100%;
+    margin-top: 15%;
+    margin-left: 5%;
 
 }
     
 
 .jemappelle{
-    
-    height: 500px;
-    width: 70%;
+   text-align: center;
+   width: 30%;
+   font-size: larger;
+   margin-right: 10%;
+   margin-top: 9%;
+
 }
    
 
@@ -114,9 +109,10 @@ ul li a:hover{
    display: flex;
     padding: 10%;
     background-color: white;
-    height: 65vh;
-    width: 75vw;
-    margin: 0 auto; 
+    height: 90vh;
+    width: 95vw;
+    margin:  auto; 
+    
 
 
 }
@@ -236,17 +232,18 @@ margin-top: 50px;
     background-size: cover;
 }
 
+
 .dwwm{  
      width: 400px;
-    margin-top: 20px;
     letter-spacing: 10px;
-    font-size: large;  
-      
-
+    font-size: large; 
+    text-align: center;
+    
+    
 }
 
 .ordi{
-    margin-top: 30px;
+    height: 100%;
     background-image: url(img/pexels-ann-poan-5797903.jpg);
     background-position: center;
     background-size: cover;
@@ -254,90 +251,403 @@ margin-top: 50px;
     justify-content: center;
     align-items: center;
     opacity: 70%;
-    border-radius: 20%;
-
-
+    border-radius: 10%; 
+    width: 300px;
     
 }
+
+.diagramme {
+    height: 90%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+   
+  }
+ .cotégauche{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 90%;
+    width: 30%;
+    margin-top: 15%;
+ }
+  
+  .html {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+  }
+  .html2 {
+    height: 50px;
+    width: 60%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+
+.logohtml{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+  .angular {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+    margin-top: 50px;
+  }
+  .angular2 {
+    height: 50px;
+    width: 60%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+
+  .logoangular{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+
+
+  .js {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+    margin-top: 50px;
+  }
+  .js2 {
+    height: 50px;
+    width: 60%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+
+  .logojs{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+
+  .php {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+    margin-top: 50px;
+  }
+  .php2 {
+    height: 50px;
+    width: 60%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+    
+  .logophp{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+  .cotédroit{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 90%;
+    width: 30%;
+    margin-top: 15%;
+    
+  }
+
+  .sql {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+  }
+  .sql2 {
+    height: 50px;
+    width: 60%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+
+  .logosql{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+  .docker {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+    margin-top: 50px;
+  }
+  .docker2 {
+    height: 50px;
+    width: 60%;
+    background-color:#A8A088;
+    border-radius: 50px;
+  }
+
+  .logodocker{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+  .figma {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+    margin-top: 50px;
+  }
+  .figma2 {
+    height: 50px;
+    width: 60%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+
+  .logofigma{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+  .git {
+    height: 50px;
+    width: 60%;
+    background-color: white;
+    border-radius: 50px;
+    margin-top: 50px;
+  }
+  .git2 {
+    height: 50px;
+    width: 60%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+  
+  .logogit{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+  
+}
+
+
+/*CommunityManager*/
+
+.titreCM{
+    text-align: center;
+}
+.GLOBAL{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   margin-top: 10%;
+}
+.management{
+    display: flex;
+    margin-left: -70%;
+}
+
+.flyerlogo{
+    display: flex;
+    margin-left: -70%;
+}
+.seo {
+    height: 50px;
+    width: 50%;
+    background-color: #A8A088;
+    border-radius: 50px;
+    margin-bottom: 3%;
+  }
+  .seo2 {
+    height: 50px;
+    width: 40%;
+    background-color: #CDC2AE;
+    border-radius: 50px;
+  }
+
+.logoseo{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+  .capcut {
+    height: 50px;
+    width: 50%;
+    background-color: #A8A088;
+    border-radius: 50px;
+    
+  }
+  .capcut2 {
+    height: 50px;
+    width: 40%;
+    background-color: #CDC2AE;
+    border-radius: 50px;
+  }
+
+  .logocapcut{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+
+
+  .canva {
+    height: 50px;
+    width: 50%;
+    background-color: #A8A088;
+    border-radius: 50px;
+    margin-top: 50px;
+  }
+  .canva2 {
+    height: 50px;
+    width: 40%;
+    background-color: #CDC2AE;
+    border-radius: 50px;
+  }
+
+  .logocanva{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-left: -40%;
+}
+
+
+  .MDRS {
+    height: 50px;
+    width: 50%;
+    background-color: #A8A088;
+    border-radius: 50px;
+    margin-top: 50px;
+    margin-bottom: 3%;
+  }
+  .MDRS2 {
+    height: 50px;
+    width: 40%;
+    background-color: #CDC2AE;
+    border-radius: 50px;
+  }
+
+  
+
+  .flyer {
+    height: 50px;
+    width: 50%;
+    background-color: #A8A088;
+    border-radius: 50px;
+  }
+  .flyer2 {
+    height: 50px;
+    width: 40%;
+    background-color: #CDC2AE;
+    border-radius: 50px;
+  }
+
 
 
 /*Contacts*/
 
-
-.global{
-
-    height: 800px;
-    width: 100%;
-    display: flex;
+body .global{
+    background-image: url(img/pexels-irina-iriser-1447987.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    padding: 0%;
+    margin: 0%;
+   
+    
 
 }
 
-.global1{
-
-    display: flex;
-    width: 50%;
-    height: 800px;
-}
 
 .logo5{
     margin-top: 1%;
     margin-left: 1%;
-    height: 800px;
-    width: 20%;
+    height: 60px;
+    width: 60px;
 }
 
 .logo55{
     height: 60px;
     width: 60px;
+    border-radius: 50% ;
 }
 
-
-.fleur{
-
-    background: url(img/pexels-irina-iriser-1447987.jpg);
-    height: 820px;
-    width: 300px;
-    background-position: center;
-    background-size: cover;
-    opacity: 50%;
-}
 
 .merci{
     height: 400px;
     width: 100%;
     text-align: center;
+   font-size: 30px;
+   color: white;
 }
 
-.RS{
-    display: flex;
-    justify-content:space-around;  
-    height: 125px;
+
+/* Page contact */
+
+  input[type=text], textarea, input[type=email] {
     width: 100%;
-}
-    
-
-.RS img{
-    height: 60px;
-    width: 60px;
-
-}
-
-.adresse{
-    text-align: center;
-    height: 400px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    margin-right: 0px;
+    margin-left: 0px;
+    resize: vertical;
+  }
+  label{margin-right: 0px;
+    margin-left: 0px;
+    width: 100%;}
+  
+  input[type=submit] {
+    background-color: #A8A088;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #1872D9;
+  }
+  
+  .container {
+    box-sizing : border-box;
+    border-radius:5px;
+    background-color:#CDC2AE;
+    padding:20px;
     width: 100%;
-}
+    max-width: 440px;
+    margin:0 auto;
+  }
 
-.liste{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.global1{
-    display: flex;
-    flex-direction: column;
-    
-}
-
+  
