--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "judson",sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 
 }
 
@@ -12,7 +12,14 @@
     height: 100vh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
    
+}
+.logo{
+    height: 65px;
+    width: 65px;
+    border-radius: 50px;
 }
 .navbar{
   background-color: #CDC2AE;
@@ -33,7 +40,10 @@
     background-color: #CDC2AE;
     border-radius: 30px;
     color: white;
-    margin: 0 auto;
+ margin: auto;
+ margin-right: -1px;
+
+  
     
 
 
@@ -68,7 +78,10 @@ ul li a:hover{
 
 
     .developpeuse{
-        font-size: x-small;
+        font-size: 15px;
+        text-align: center;
+        margin-top: 24px;
+        
     }
    
     
@@ -576,6 +589,7 @@ margin-top: 50px;
 body .global{
     background-image: url(img/pexels-irina-iriser-1447987.jpg);
     height: 100vh;
+    width: 100%;
     background-size: cover;
     background-position: center;
     padding: 0%;
