--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@
     align-items: center;
    
 }
-.logo{
+/* .logo{
     height: 65px;
     width: 65px;
-    border-radius: 50px;
-}
+    border-radius: 50px; */
+
 .navbar{
   background-color: #CDC2AE;
   position: absolute;
@@ -588,6 +588,7 @@ margin-top: 50px;
 
 body .global{
     background-image: url(img/pexels-irina-iriser-1447987.jpg);
+    background-image: rgba(220,220,220,.1);
     height: 100vh;
     width: 100%;
     background-size: cover;
@@ -615,7 +616,7 @@ body .global{
 
 
 .merci{
-    height: 400px;
+    height: 200px;
     width: 100%;
     text-align: center;
    font-size: 30px;
@@ -624,6 +625,14 @@ body .global{
 
 
 /* Page contact */
+
+
+.logotitre{
+    display: flex;
+    flex-direction: row-reverse;
+    height: 100px;
+    letter-spacing: 15px;
+}
 
   input[type=text], textarea, input[type=email] {
     width: 100%;
@@ -654,14 +663,22 @@ body .global{
     background-color: #1872D9;
   }
   
+  
   .container {
     box-sizing : border-box;
     border-radius:5px;
-    background-color:#CDC2AE;
+   color: white;
     padding:20px;
     width: 100%;
     max-width: 440px;
-    margin:0 auto;
+    margin:auto;
+    display: flex;
+    align-items: center;
+    height: 80%;
   }
 
+  form{
+    width: 800px;
+    
+  }
   
