--- a/style.css
+++ b/style.css
@@ -12,42 +12,34 @@
     height: 100vh;
     background-size: cover;
     background-position: center;
-    display: flex;
     align-items: center;
+    display: flex
    
 }
-/* .logo{
-    height: 65px;
-    width: 65px;
-    border-radius: 50px; */
+
 
 .navbar{
   background-color: #CDC2AE;
-  position: absolute;
   display: flex;
   justify-content: space-between;
+  text-decoration: overline;
   padding: 20px;
   width: 100%;
-  box-sizing: border-box;
+  height: 60px;
+
   
 }
 
-
 .bloc{
      
-    height: 150px;
-    width: 280px;
-    background-color: #CDC2AE;
+    height: 200px;
+    width: 400px;
+    background-color: white;
     border-radius: 30px;
-    color: white;
- margin: auto;
- margin-right: -1px;
-
-  
-    
-
-
-   
+    color: #A8A088;
+    margin: auto;
+    margin-right: 99px;
+ 
 }
 
 ul{
@@ -55,10 +47,13 @@ ul{
     list-style: none;
     float: right;
     margin-top: 20px;
+   
+
+  
 }
 
-ul li a{
-    text-decoration: none;
+ul li{
+  
     color: white;
     padding: 10px 20px;
     text-transform: uppercase;
@@ -66,21 +61,18 @@ ul li a{
     margin: 10px;
     font-weight: 500;
     transition: 0,6s ease ;
+  
 }
 
-ul li a:hover{
+ul li:hover{
     background: #ffff;   
     color: #CDC2AE;
 }
 
-
- 
-
-
     .developpeuse{
         font-size: 15px;
         text-align: center;
-        margin-top: 24px;
+        margin-top: 55px;
         
     }
    
