--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .background{
     background-image: url(img/pexels-ann-poan-5797903.jpg);
-    height: 100vh;
+    height: 90vh;
     background-size: cover;
     background-position: center;
     align-items: center;
@@ -17,29 +17,67 @@
    
 }
 
+.newnav{
+  display: flex;
+  align-content: space-between;
+  margin-top: -30px;
+}
+
+/* .lignenav{
+  
+    border: 1px solid black;
+    width: 100%; 
+    margin: 10px 0; 
+
+} */
+
 
 .navbar{
   background-color: #CDC2AE;
   display: flex;
-  justify-content: space-between;
-  text-decoration: overline;
+ align-content: space-between;
+  text-decoration: none;
   padding: 20px;
   width: 100%;
-  height: 60px;
+  height: 80px; 
+}
 
-  
+
+  .verticallogo2{
+    width: 5px; /* Largeur de la ligne */
+    height: 740px; /* Hauteur de la ligne (ajustez selon vos besoins) */
+    background-color: black; /* Couleur de la ligne */
+    margin-left: 796px;
+    position: absolute; /* Position absolue pour le positionnement */
+    bottom: 0;
+}
+
+.logocentre img{
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  display: flex;
+  margin-left: 650px;
+  margin-bottom:40px ;
 }
 
 .bloc{
      
     height: 200px;
-    width: 400px;
+    width: 800px;
     background-color: white;
     border-radius: 30px;
     color: #A8A088;
     margin: auto;
     margin-right: 99px;
- 
+    margin-top: 30%;
+    
+}
+.developpeuse h1{
+  text-align: center;
+  font-size: 37x;
+  margin-top: 54px;
+
 }
 
 ul{
@@ -47,8 +85,8 @@ ul{
     list-style: none;
     float: right;
     margin-top: 20px;
-   
-
+   justify-content: space-between;
+   margin-left: 87%;
   
 }
 
@@ -61,6 +99,7 @@ ul li{
     margin: 10px;
     font-weight: 500;
     transition: 0,6s ease ;
+
   
 }
 
@@ -69,12 +108,6 @@ ul li:hover{
     color: #CDC2AE;
 }
 
-    .developpeuse{
-        font-size: 15px;
-        text-align: center;
-        margin-top: 55px;
-        
-    }
    
     
 
@@ -90,7 +123,7 @@ ul li:hover{
   background-size: cover;
 }
 .Présentation{
-
+    text-transform: uppercase;
     height: 225px;
     width: 100%;
     margin-top: 15%;
@@ -98,16 +131,28 @@ ul li:hover{
 
 }
     
+.lignedessus {
+  border: none; 
+  border-top: 2px solid black;
+  margin: 10px 0; 
+}
+
+.lignedessous {
+  border: none; 
+  border-top: 2px solid black;
+  margin: 10px 0; 
+}
 
 .jemappelle{
    text-align: center;
-   width: 30%;
-   font-size: larger;
+   width: 50%;
+   font-size: 23px;
    margin-right: 10%;
-   margin-top: 9%;
+   margin-top: 7%;
 
 }
    
+
 
 .rectangle{
     
@@ -255,7 +300,7 @@ margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: 70%;
+    opacity: 75%;
     border-radius: 10%; 
     width: 300px;
     
@@ -266,8 +311,20 @@ margin-top: 50px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-   
   }
+  .elementscentre{
+display: flex;
+flex-direction: column;
+height: 100%;
+  }
+.dwwm{
+  margin-right: 60%;
+  width: 100%;
+  font-size: 30px;
+  margin-bottom: 10%;
+  letter-spacing: 10px;
+}
+
  .cotégauche{
     display: flex;
     flex-direction: column;
@@ -279,7 +336,7 @@ margin-top: 50px;
   
   .html {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
   }
@@ -288,6 +345,7 @@ margin-top: 50px;
     width: 60%;
     background-color: #A8A088;
     border-radius: 50px;
+    border: 2px solid white;
   }
 
 .logohtml{
@@ -299,7 +357,7 @@ margin-top: 50px;
 
   .angular {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
     margin-top: 50px;
@@ -322,7 +380,7 @@ margin-top: 50px;
 
   .js {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
     margin-top: 50px;
@@ -344,7 +402,7 @@ margin-top: 50px;
 
   .php {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
     margin-top: 50px;
@@ -375,7 +433,7 @@ margin-top: 50px;
 
   .sql {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
   }
@@ -395,7 +453,7 @@ margin-top: 50px;
 
   .docker {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
     margin-top: 50px;
@@ -416,7 +474,7 @@ margin-top: 50px;
 
   .figma {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
     margin-top: 50px;
@@ -437,7 +495,7 @@ margin-top: 50px;
 
   .git {
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: white;
     border-radius: 50px;
     margin-top: 50px;
@@ -460,6 +518,7 @@ margin-top: 50px;
 
 /*CommunityManager*/
 
+
 .titreCM{
     text-align: center;
 }
@@ -476,8 +535,9 @@ margin-top: 50px;
 
 .flyerlogo{
     display: flex;
-    margin-left: -70%;
+    margin-left: -70%;   
 }
+
 .seo {
     height: 50px;
     width: 50%;
@@ -559,7 +619,10 @@ margin-top: 50px;
     border-radius: 50px;
   }
 
-  
+  .management{
+    display: flex;
+    align-items: center;
+  }
 
   .flyer {
     height: 50px;
@@ -580,21 +643,19 @@ margin-top: 50px;
 
 body .global{
     background-image: url(img/pexels-irina-iriser-1447987.jpg);
-    background-image: rgba(220,220,220,.1);
+    opacity: 80%;
     height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: center;
     padding: 0%;
     margin: 0%;
-   
-    
-
+  
 }
 
 
 .logo5{
-    margin-top: 1%;
+    margin-top: 2%;
     margin-left: 1%;
     height: 60px;
     width: 60px;
@@ -613,17 +674,14 @@ body .global{
     text-align: center;
    font-size: 30px;
    color: white;
+   margin-right: 6%;
 }
-
-
-/* Page contact */
-
 
 .logotitre{
     display: flex;
     flex-direction: row-reverse;
     height: 100px;
-    letter-spacing: 15px;
+    letter-spacing: 10px;
 }
 
   input[type=text], textarea, input[type=email] {
@@ -674,3 +732,6 @@ body .global{
     
   }
   
+  form  .lecontact{
+    margin-bottom: 10%;
+  }
